v3.0 (27.09.2021)

- init hooks should no longer cause emergency shells to be invoked
- you can invoke a emergency shell by adding "arnix.emergency" to kernel parameters
- "rollback" kernel parameter has been renamed to "arnix.rollback"
- GRUB symlink should update from now on
- 'arnixctl edit' has been added for simplicity sake
- updating is even more reliable! (better late than never...)

---

v2.1 (19.09.2021)

- added verbose mode
- cancelling an update should not fool the updater into believing that the system is up-to-date
- arnixctl will now pass arguments to the update applet from now on
- the uninstall process will show one more step

!!! The new arnix.conf has a new option !!!

---

release 2 (12.08.2021)

see changes below

NOTE:

if you're upgrading from v1, do the following steps:
- make sure that /arnix/merge/bin has files in it
- delete the contents of /arnix/bin
- copy the contents of /arnix/merge/bin over to /arnix/bin
- run: arnixctl update

---

release candidate 2 for v2 (11.08.2021)

post-update scripts are now a thing (will take effect next upgrade)
if there's something that can't be done automagically, we will tell you

You now can view the changelog with 'arnixctl changelog'!

AFTER THE UPDATE:
run:
ln -srfT /arnix/bin/arnixctl.sh /usr/bin/arnixctl

---

release candidate 1 for v2 (11.08.2021)

Arnix's files should also be merged automatically if they haven't been merged; otherwise you will have to merge .arnixnew files yourself

the hijack process should create checksum files from now on

MANUAL INTERVENTION NEEDED (if you're not updating from rc2 v2 or later):
change the symlink /bin/arnixctl to point to /arnix/bin/arnixctl.sh

----

release candidate 3 (09.08.2021 - DD.MM.YYYY)

- Independance from pacman ... wooo!
- Arnix is now 100% POSIX compliant

MANUAL INTERVENTION NEEDED (if you're not updating from rc2 v2 or later):
You need to symlink the new pacman hook