@@ -1,6 +1,6 @@
 MIT License
 
-Copyright (c) 2021 I don't want to dox myself
+Copyright (c) 2021 GermanBread (on Github)
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
