@@ -1,8 +1,6 @@
 # Arnix
 
-Arch Linux with generations - and a nice tool to mange those
-
-Current status: **STABLE**
+Linux with generations - and a nice tool to mange those
 
 ---
 
@@ -15,7 +13,7 @@ Download the newest installer [from here](https://github.com/GermanBread/Arnix/r
 - Use `arnixctl` to manage Arnix!
 - Configure the behaviour of Arnix by editing `/arnix/etc/arnix.conf`
 - Add `quiet` to kernel parameters for quiet boot
-- Add `rollback` to kernel parameters to revert to a generation from within init
+- Add `arnix.rollback` to kernel parameters to revert to a generation from within init
 
 ### Uninstalling
 
