@@ -34,6 +34,7 @@
                 <h2>Links</h2>
                 <p>See development progress <a href="news.html">here</a></p>
                 <p>See Arnix's stability and compatibility status <a href="status.html">here</a></p>
+                <p>Wiki is located <a href="https://github.com/GermanBread/Arnix/wiki">here</a></p>
             </div>
         </div>
     </body>
