@@ -22,6 +22,30 @@
             <h1>Arnix – news</h1>
             <a href="index.html">Take me back!</a>
             <hr>
+            <div id="content-view v3">
+                <h2>Major release v3!</h2>
+                <p>Moar stability!!!</p>
+                <br>
+                <h2>Features</h2>
+                <p>I made the updating process incredibly reliable. No more fear of the updater misbehaving!</p>
+                <p>you can invoke a emergency shell by adding "arnix.emergency" to kernel parameters</p>
+                <p>'arnixctl edit' has been added for simplicity sake</p>
+                <h2>Bugfixes</h2>
+                <p>init hooks should no longer cause emergency shells to be invoked</p>
+                <p>GRUB symlink should update from now on</p>
+                <h2>Changes</h2>
+                <p>"rollback" kernel parameter has been renamed to "arnix.rollback"</p>
+                <br>
+                <p>Releases can be downloaded <a href="https://github.com/GermanBread/Arnix/releases/latest">here</a></p>
+            </div>
+            <hr>
+            <div id="content-view v2">
+                <h2>Bugfix v2.2!</h2>
+                <p>More reliability improvements!</p>
+                <br>
+                <p>Releases can be downloaded <a href="https://github.com/GermanBread/Arnix/releases/latest">here</a></p>
+            </div>
+            <hr>
             <div id="content-view v2">
                 <h2>Small v2.1 update!</h2>
                 <p>This small release features some changes which should make Arnix more reliable.</p>
