@@ -1,1 +1,1 @@
-8a2c3fa10458cd02c7554b0e71d7bf600b7ade2b  arnix-bootstrap.tar.gz
+dc3f275ae29d896986eb5a135677292a277beb53  arnix-bootstrap.tar.gz
