@@ -1,1 +1,1 @@
-body{background-color:#212;font-size:20px}#logo{position:sticky;top:1em;left:1em;font-size:clamp(5px, 2vw, 20px);color:#D6D;text-shadow:#C5C 0 0 .5em;pointer-events:none}#main-view{text-align:center;font-family:'Courier New', Courier, monospace;color:#A4A;margin:2vw}#main-view #content-view{margin-left:10%;margin-right:10%}#main-view hr{margin-left:5%;margin-right:5%}#main-view p,#main-view pre,#main-view code,#main-view a{text-align:left}#main-view code{background-color:#301530;border-radius:5px;padding:.3em}#main-view a{color:#A4A;text-shadow:#939 0 0 .25em}#main-view a:hover{color:#B5B;text-shadow:#A4A 0 0 .25em}hr{border-color:#D6D;box-shadow:#C5C 0 0 .5em;margin-top:2em}
+body{background-color:#212;font-size:20px}#logo{position:sticky;top:1em;left:1em;font-size:clamp(5px, 2vw, 20px);color:#D6D;text-shadow:#C5C 0 0 .5em;pointer-events:none}#main-view{text-align:center;font-family:'Courier New', Courier, monospace;color:#A4A;margin-inline:auto;max-width:100ch}#main-view #content-view{margin-inline:10%}#main-view hr{margin-inline:5%}#main-view p,#main-view pre,#main-view code,#main-view a{text-align:left}#main-view code{background-color:#301530;border-radius:5px;padding:.3em}#main-view a{color:#A4A;text-shadow:#939 0 0 .25em}#main-view a:hover{color:#B5B;text-shadow:#A4A 0 0 .25em}hr{border-color:#D6D;box-shadow:#C5C 0 0 .5em;margin-top:2em}
